--- a/blog.html
+++ b/blog.html
@@ -15,9 +15,20 @@
 </head>
 
 <body>
+  <header>
+    <h2>My First Blog</h2>
+    <button id="toggle">&#x2600;</button>
+  </header>
 
-  <!-- TODO: Create header, main, and footer elements -->
+  <main>
+    <article>
 
+    </article>
+  </main>
+
+  <footer>
+
+  </footer>
 </body>
 
 </html>
