--- a/index.html
+++ b/index.html
@@ -13,17 +13,38 @@
     <script defer src="./assets/js/form.js" type="text/javascript"></script>
   </head>
 <body>
-  <!-- TODO: Create landing page elements to match the mock-up provided. At the very least, include the following elements. -->
+  <header>
+    <h1>My First Blog</h1>
+    <button id="toggle">&#x2600;</button>
+  </header>
+  
 
-  <!-- A form element that contains the following: -->
+  <main>
+      <aside>
+        <h2>My First Blog</h2>
+      </aside>
 
-    <!-- An input element whose label and id are `username` -->
+      <section>
+        <h2>What's On your Mind?</h2>
+        <form action="">
+          <label for="username">Username:</label>
+          <input type="text" id="username" name="username">
 
-    <!-- An input element whose label and id are `title` -->
+          <label for="title">Title</label>
+          <input type="text" id="title" name="title">
 
-    <!-- A textarea element whose label and id are `content` -->
+          <label for="content">Content</label>
+          <textarea name="Content" id="content"></textarea>
+          
+          <p id="error"></p>
 
-    <!-- A p element whose id is `error` -->
+          <input type="submit">
+        </form>
+      </section>
+    </main>
 
+    <footer>
+
+    </footer>
 </body>
 </html>
